solucionando erros da API

--- a/angels/build.gradle
+++ b/angels/build.gradle
@@ -20,7 +20,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
-	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.0.2'
+	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.8.0'
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 	implementation 'org.flywaydb:flyway-core'
 	//runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'mysql:mysql-connector-java:8.0.28'
